--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,5 @@ dependencies {
 
     implementation("io.coil-kt:coil-compose:2.4.0")
 
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 }
