--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,12 @@ dependencies {
     implementation("io.coil-kt:coil-compose:2.4.0")
 
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
+
+    implementation("androidx.hilt:hilt-navigation-compose:1.0.0")
+
+    implementation "androidx.compose.ui:ui-util:1.4.3"
+
+
 }
